# psionic

./: AGENTS.md  README.md  TRAIN  TRAIN_TASSADAR
crates/psionic-backend-tests/: Cargo.toml
crates/psionic-backend-tests/src/: lib.rs
crates/psionic-csm-speech/: Cargo.toml
crates/psionic-csm-speech/src/: lib.rs
crates/psionic-data/: Cargo.toml
crates/psionic-data/examples/: legal_benchmark_build_dpo_dataset.rs  legal_benchmark_build_sft_dataset.rs  legal_benchmark_generate_synthetic_tasks.rs  legal_benchmark_shard_dataset.rs  psion_plugin_conditioned_dataset.rs  psion_plugin_contamination_controls.rs  psion_plugin_training_derivation.rs  qwen_legal_corpus_bundle.rs  tassadar_multi_plugin_trace_corpus_bundle.rs  tassion_plugin_contamination_controls.rs
crates/psionic-data/src/: apple_adapter.rs  cs336_a1_bpe.rs  legal_benchmark_dataset_sharding.rs  legal_benchmark_dpo_dataset.rs  legal_benchmark_sft_dataset.rs  legal_benchmark_synthetic_tasks.rs  legal_benchmark_training_record.rs  lib.rs  parameter_golf.rs  psion_benchmark_isolation.rs  psion_plugin_conditioned_dataset.rs  psion_plugin_contamination_controls.rs  psion_plugin_training_derivation.rs  psion_plugin_training_record.rs  psion_raw_source_ingestion.rs  psion_reference_corpus.rs  psion_source_lifecycle.rs  psion_tokenizer_training.rs  qwen_legal_corpus_bundle.rs  tassadar.rs  tassadar_article_interpreter_breadth_suite.rs  tassadar_broad_program_family.rs  tassadar_compiled_distillation.rs  tassadar_learned_call_stack_heap_suite.rs  tassadar_mixed_trajectory.rs  tassadar_multi_plugin_trace_corpus.rs  tassadar_program_family_frontier.rs  tassadar_search_native_executor.rs  tassadar_trace_state_ablation.rs  tassadar_universality_witness_suite.rs  tassadar_weak_supervision.rs  tassion_plugin_contamination_controls.rs  topology_revisable_distributed_data_feed.rs
crates/psionic-mlx-audio/: Cargo.toml
crates/psionic-mlx-audio/src/: lib.rs
crates/psionic-mlx-bench/: Cargo.toml
crates/psionic-mlx-bench/src/: lib.rs
crates/psionic-mlx-lm/: Cargo.toml
crates/psionic-mlx-lm/src/: lib.rs
crates/psionic-models/: Cargo.toml
crates/psionic-models/examples/: medpsy_bench.rs  psion_compact_decoder_descriptor_fixtures.rs
crates/psionic-models/src/: attnres.rs  cs336_a1_reference_stack.rs  cs336_a1_tokenizer.rs  cs336_a2_flashattention_reference.rs  csm.rs  csm_parity.rs  fixtures.rs  harmony.rs  lib.rs  medpsy_qwen3.rs  parameter_golf.rs  parameter_golf_promoted_bundle.rs  psion_compact_decoder.rs  qwen36.rs  qwen36_forward_admission.rs  qwen_replacement_conformance.rs  runtime_tokenizer.rs  sharding.rs  tassadar.rs  tassadar_architecture_bakeoff.rs  tassadar_article_transformer.rs  tassadar_broad_family_specialization.rs  tassadar_call_frames.rs  tassadar_conditional_masking_executor.rs  tassadar_decompilable_executor.rs  tassadar_executor_attention.rs  tassadar_executor_transformer.rs  tassadar_generalized_abi.rs  tassadar_internal_compute_profile.rs  tassadar_internal_module_library.rs  tassadar_learned_call_stack_heap_suite.rs  tassadar_locality_envelope.rs  tassadar_memory_abi_v2.rs  tassadar_module_execution.rs  tassadar_module_specialization.rs  tassadar_negative_invocation.rs  tassadar_pointer_memory_scratchpad.rs  tassadar_precision_attention_audit.rs  tassadar_program_family_frontier.rs  tassadar_quantization_truth_envelope.rs  (+10 more)
crates/psionic-observe/: Cargo.toml
crates/psionic-observe/src/: lib.rs
crates/psionic-optimize/: Cargo.toml
crates/psionic-optimize/src/: lib.rs
crates/psionic-runtime/: Cargo.toml
crates/psionic-runtime/examples/: psion_plugin_guest_artifact_invocation.rs  tassadar_article_fast_route_throughput_bundle.rs  tassadar_article_hard_sudoku_benchmark_bundle.rs  tassadar_broad_family_specialization_runtime_report.rs  tassadar_c_to_wasm_compile_receipt.rs  tassadar_compiled_distillation_targets.rs  tassadar_cross_profile_link_compatibility_bundle.rs  tassadar_effectful_replay_audit_bundle.rs  tassadar_installed_process_lifecycle_bundle.rs  tassadar_internal_module_library_report.rs  tassadar_linked_program_bundle_runtime_report.rs  tassadar_locality_envelope_runtime_report.rs  tassadar_million_step_decode_benchmark_bundle.rs  tassadar_module_link_runtime_report.rs  tassadar_multi_memory_runtime_bundle.rs  tassadar_pointer_memory_scratchpad_runtime_report.rs  tassadar_post_article_plugin_html_extract_readable_bundle.rs  tassadar_post_article_plugin_http_fetch_text_bundle.rs  tassadar_post_article_plugin_invocation_receipts_and_replay_classes_bundle.rs  tassadar_post_article_plugin_packet_abi_and_rust_pdk_bundle.rs  tassadar_post_article_plugin_text_url_extract_bundle.rs  tassadar_post_article_starter_plugin_tool_bridge_bundle.rs  tassadar_precision_attention_runtime_audit.rs  tassadar_preemptive_job_runtime_bundle.rs  tassadar_quantization_truth_envelope_runtime_report.rs  tassadar_recurrent_fast_path_runtime_baseline.rs  tassadar_relaxed_simd_runtime_report.rs  tassadar_search_native_executor_runtime_report.rs  tassadar_semantic_window_migration_report.rs  tassadar_session_process_profile_runtime_report.rs  tassadar_shared_state_concurrency_runtime_verdict_report.rs  tassadar_simd_profile_runtime_report.rs  tassadar_simulator_effect_runtime_bundle.rs  tassadar_tcm_v1_runtime_contract_report.rs  tassadar_threads_research_profile_report.rs  tassadar_trace_abi_decision_report.rs
crates/psionic-runtime/src/: lib.rs  local_multi_device.rs  psion_plugin_guest_artifact_invocation.rs  psion_plugin_guest_artifact_manifest.rs  psion_plugin_guest_artifact_runtime_loading.rs  structured_output.rs  tassadar.rs  tassadar_article_fast_route_throughput.rs  tassadar_article_hard_sudoku_benchmark.rs  tassadar_article_representation_invariance.rs  tassadar_article_runtime_closeout.rs  tassadar_article_trace_schema.rs  tassadar_article_transformer_forward_pass.rs  tassadar_broad_family_specialization.rs  tassadar_call_frame_resume.rs  tassadar_call_frames.rs  tassadar_conditional_masking.rs  (+47 more)
crates/psionic-sandbox/: Cargo.toml
crates/psionic-train/: Cargo.toml
crates/psionic-vad/: Cargo.toml
(+3870 files in other folders)
