[package]
name = "psionic-backend-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Shared backend conformance harnesses for Psionic runtime and array lanes"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
hex = { workspace = true }
psionic-core = { path = "../psionic-core" }
psionic-ir = { path = "../psionic-ir" }
psionic-runtime = { path = "../psionic-runtime" }
serde = { workspace = true }
sha2 = { workspace = true }
