[package]
name = "psionic-data"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Rust-native dataset, tokenizer, split, iteration, and packing contracts for Psionic"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
fancy-regex = "0.16.2"
hex = { workspace = true }
psionic-datastream = { path = "../psionic-datastream" }
psionic-ir = { path = "../psionic-ir" }
psionic-runtime = { path = "../psionic-runtime" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
