[package]
name = "psionic-mlx-bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Bounded MLX-style benchmark package and provider adapters above psionic-eval"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
psionic-data = { path = "../psionic-data" }
psionic-environments = { path = "../psionic-environments" }
psionic-eval = { path = "../psionic-eval" }
psionic-mlx-lm = { path = "../psionic-mlx-lm" }
psionic-mlx-vlm = { path = "../psionic-mlx-vlm" }
psionic-models = { path = "../psionic-models" }
psionic-serve = { path = "../psionic-serve" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
