[package]
name = "psionic-optimize"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Rust-native optimizer substrate contracts, lineage state, and run receipts for Psionic"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
