[package]
name = "psionic-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Runtime traits for Psionic devices and execution"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
ed25519-dalek = { workspace = true }
hex = { workspace = true }
psionic-core = { path = "../psionic-core" }
psionic-ir = { path = "../psionic-ir" }
rand = { workspace = true }
regex = "1"
regex-syntax = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
roxmltree = "0.20"
scraper = "0.23"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
url = "2"
wasm-encoder = "0.244.0"
wasmparser = "0.244.0"
wasmi = "1"

[dev-dependencies]
tempfile = "3"
wat = "1"
