[package]
name = "psionic-sandbox"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Psionic-owned sandbox detection and execution substrate"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
hex = { workspace = true }
psionic-compiler = { path = "../psionic-compiler" }
psionic-core = { path = "../psionic-core" }
psionic-models = { path = "../psionic-models" }
psionic-runtime = { path = "../psionic-runtime" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
