[package]
name = "psionic-vad"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Psionic-owned streaming voice activity detection worker contracts and MVP runtime"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
